--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ h2 {
 
 .about-content img {
     width: 300px; /* Adjust image size */
-    height: 300px;
+    height: auto;
     border-radius: 50%;
     margin-left: 100px; /* Adds spacing from the text */
 }
